tests/ui/lint/snapshots/ineffective_omitempty_on_array_field.snap
---
source: tests/ui/lint/mod.rs
---
  ▲ Ineffective `omitempty`
   ╭─[test.lis:4:3]
 3 │ pub struct Reading {
 4 │   #[json(omitempty)]
   ·   ─────────┬────────
   ·            ╰── has no effect
 5 │   pub samples: Array<int, 3>,
   ╰────
  help: Go omits an `omitempty` field only when it is empty, and a fixed-size array never is. Use `omitzero` to omit the zero value · code: [lint.ineffective_omitempty]
