tests/ui/lint/snapshots/ineffective_omitempty_on_option_with_negated_omitzero.snap
---
source: tests/ui/lint/mod.rs
---
  ▲ Ineffective `omitempty`
   ╭─[test.lis:4:3]
 3 │ pub struct Holder {
 4 │   #[json(omitempty, !omitzero)]
   ·   ──────────────┬──────────────
   ·                 ╰── has no effect
 5 │   pub kept: Option<int>,
   ╰────
  help: Go omits an `omitempty` field only when it is empty, and an enum never is. Remove `omitempty`, or use `omitzero` to omit the first variant when its fields are all zero · code: [lint.ineffective_omitempty]
