tests/ui/lint/snapshots/ineffective_omitempty_on_tuple_field.snap
---
source: tests/ui/lint/mod.rs
---
  ▲ Ineffective `omitempty`
   ╭─[test.lis:4:3]
 3 │ pub struct Point {
 4 │   #[json(omitempty)]
   ·   ─────────┬────────
   ·            ╰── has no effect
 5 │   pub at: (int, int),
   ╰────
  help: Go omits an `omitempty` field only when it is empty, and a tuple never is. Use `omitzero` to omit the zero value · code: [lint.ineffective_omitempty]
