tests/ui/lint/snapshots/ineffective_omitempty_through_alias.snap
---
source: tests/ui/lint/mod.rs
---
  ▲ Ineffective `omitempty`
    ╭─[test.lis:10:3]
  9 │ pub struct User {
 10 │   #[json(omitempty)]
    ·   ─────────┬────────
    ·            ╰── has no effect
 11 │   pub home: Home,
    ╰────
  help: Go omits an `omitempty` field only when it is empty, and a struct never is. Use `omitzero` to omit the zero value · code: [lint.ineffective_omitempty]
