tests/ui/lint/snapshots/infallible_assertion_fires_for_test_context_param_helper.snap
---
source: tests/ui/lint/mod.rs
---
  ▲ Infallible assertion
   ╭─[util.test.lis:2:3]
 1 │ fn helper(t: TestContext) {
 2 │   assert true
   ·   ─────┬─────
   ·        ╰── never fails
 3 │ }
   ╰────
  help: This assertion cannot catch a regression. Write a useful assertion · code: [lint.infallible_assertion]
