tests/ui/lint/snapshots/infallible_assertion_fires_in_nested_function_inheriting_context.snap
---
source: tests/ui/lint/mod.rs
---
  ▲ Infallible assertion
   ╭─[util.test.lis:4:5]
 3 │   fn inner() {
 4 │     assert true
   ·     ─────┬─────
   ·          ╰── never fails
 5 │   }
   ╰────
  help: This assertion cannot catch a regression. Write a useful assertion · code: [lint.infallible_assertion]
